--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.brook.app.android.permissionutil"
+        applicationId "com.brook.app.android.supportlibrary.permissionutil"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
